force-app/main/default/objects/Proposta_do_centro__c/Proposta_do_centro__c.object-meta.xml
<CustomObject>
    <description>Proposta de criação endereçadas a empresa Caramilows.</description>
    <label>Proposta do centro</label>
    <nameField>
        <label>Nome de Proposta dos centros</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propostas dos centros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>