force-app/main/default/objects/Proposta_do_centro__c/fields/Aprovacao_proposta_de_criacao__c.field-meta.xml
<CustomField>
    <fullName>Aprovacao_proposta_de_criacao__c</fullName>
    <label>Aprovacao proposta de criacao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposta Aprovada</fullName>
            </value>
            <value>
                <fullName>Proposta Rejeitada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>