force-app/main/default/objects/Proposta_do_centro__c/fields/Codigo_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Proposta__c</fullName>
    <description>Codigo da proposta.</description>
    <displayFormat>PC- {0000}</displayFormat>
    <inlineHelpText>Codigo da proposta.</inlineHelpText>
    <label>Codigo Proposta</label>
    <type>AutoNumber</type>
</CustomField>