force-app/main/default/objects/Proposta_do_centro__c/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Desconto na proposta.</description>
    <inlineHelpText>Selecione em caso de desconto.</inlineHelpText>
    <label>Desconto</label>
    <type>Checkbox</type>
</CustomField>