force-app/main/default/objects/Proposta_do_centro__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição da proposta.</description>
    <inlineHelpText>Descreva sua proposta de forma detalhada.</inlineHelpText>
    <label>Descricao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>