force-app/main/default/objects/Proposta_do_centro__c/fields/Empresa_contratante__c.field-meta.xml
<CustomField>
    <fullName>Empresa_contratante__c</fullName>
    <description>Empresa contratante relacionada a proposta.</description>
    <inlineHelpText>Informe empresa contratante relacionada a proposta.</inlineHelpText>
    <label>Empresa contratante</label>
    <referenceTo>Empresa_contratante__c</referenceTo>
    <relationshipLabel>Propostas dos centros</relationshipLabel>
    <relationshipName>Propostas_dos_centros</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>