force-app/main/default/objects/Proposta_do_centro__c/fields/Espaco__c.field-meta.xml
<CustomField>
    <fullName>Espaco__c</fullName>
    <description>Informe sobre o espaço.</description>
    <inlineHelpText>Informe sobre o espaço.</inlineHelpText>
    <label>Espaco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>