force-app/main/default/objects/Proposta_do_centro__c/fields/Foco_de_Armazenamento__c.field-meta.xml
<CustomField>
    <fullName>Foco_de_Armazenamento__c</fullName>
    <description>Foco de armazenamento.</description>
    <inlineHelpText>Selecione o foco de armazenamento.</inlineHelpText>
    <label>Foco de Armazenamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Modelo_de_Armazenamento__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pimbos Aeros</fullName>
            </value>
            <value>
                <fullName>Voando Baixo</fullName>
            </value>
            <value>
                <fullName>Descendus e Cias</fullName>
            </value>
            <value>
                <fullName>Entregas a Jato</fullName>
            </value>
            <value>
                <fullName>Buso</fullName>
            </value>
            <value>
                <fullName>Caminhoners</fullName>
            </value>
            <value>
                <fullName>Uber</fullName>
            </value>
            <value>
                <fullName>MotoLindos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>