force-app/main/default/objects/Proposta_do_centro__c/fields/Foco_do_investimento__c.field-meta.xml
<CustomField>
    <fullName>Foco_do_investimento__c</fullName>
    <description>Foco do investimento.</description>
    <inlineHelpText>Informe o foco do investimento.</inlineHelpText>
    <label>Foco do investimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>