force-app/main/default/objects/Proposta_do_centro__c/fields/Modelo_de_Armazenamento__c.field-meta.xml
<CustomField>
    <fullName>Modelo_de_Armazenamento__c</fullName>
    <description>Modelo de armazenamento.</description>
    <inlineHelpText>Selecione o modelo de armazenamento.</inlineHelpText>
    <label>Modelo de Armazenamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modelo Aéreo</fullName>
            </value>
            <value>
                <fullName>Modelo Vias e Rodovias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>