force-app/main/default/objects/Proposta_do_centro__c/fields/Nome_da_empresa__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_empresa__c</fullName>
    <description>Nome da empresa responsavel pelo envio da proposta.</description>
    <inlineHelpText>Informe Nome da empresa responsavel pelo envio da proposta.</inlineHelpText>
    <label>Nome da empresa</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>