force-app/main/default/objects/Proposta_do_centro__c/fields/Resultado_Investimento_Formula__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Investimento_Formula__c</fullName>
    <description>Valor Resultado Investimento</description>
    <formula>Valor_total_do_dinheiro_investido__c  -  (Valor_de_custo_investimento__c + ( Valor_total_do_dinheiro_investido__c *  Valor_Desconto_porcentagem__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Resultado Investimento</inlineHelpText>
    <label>Resultado Investimento Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>