force-app/main/default/objects/Proposta_do_centro__c/fields/Tipo_de_Produto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Produto__c</fullName>
    <description>Tipos de produtos.</description>
    <inlineHelpText>Descreva os tipos de produtos.</inlineHelpText>
    <label>Tipo de Produto</label>
    <referenceTo>Tipo_de_Produto__c</referenceTo>
    <relationshipLabel>Propostas dos centros</relationshipLabel>
    <relationshipName>Propostas_dos_centros</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>