force-app/main/default/objects/Proposta_do_centro__c/fields/Tipo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_do_produto__c</fullName>
    <description>Tipos de produtos.</description>
    <inlineHelpText>Selecione os Tipos do produto para proposta.</inlineHelpText>
    <label>Tipo do produto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimentos</fullName>
            </value>
            <value>
                <fullName>Bebidas</fullName>
            </value>
            <value>
                <fullName>Eletrônicos</fullName>
            </value>
            <value>
                <fullName>Ferramentas</fullName>
            </value>
            <value>
                <fullName>Livros</fullName>
            </value>
            <value>
                <fullName>Produtos de Limpeza</fullName>
            </value>
            <value>
                <fullName>Utensílios Domésticos</fullName>
            </value>
            <value>
                <fullName>Vestuário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>