force-app/main/default/objects/Proposta_do_centro__c/fields/Valor_de_custo_investimento__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_custo_investimento__c</fullName>
    <description>Valor de custo investimento</description>
    <inlineHelpText>Informe o valor de custo investimento</inlineHelpText>
    <label>Valor de custo investimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>