force-app/main/default/objects/Proposta_do_centro__c/fields/Valor_Desconto_porcentagem__c.field-meta.xml
<CustomField>
    <fullName>Valor_Desconto_porcentagem__c</fullName>
    <description>Valor Desconto porcentagem na proposta</description>
    <inlineHelpText>Adicione a porcentagem de desconto sob valor da proposta.</inlineHelpText>
    <label>Valor Desconto porcentagem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>