force-app/main/default/objects/Proposta_do_centro__c/fields/Valor_inicial__c.field-meta.xml
<CustomField>
    <fullName>Valor_inicial__c</fullName>
    <description>Valor inicial da proposta</description>
    <inlineHelpText>Informe o valor inicial da proposta.</inlineHelpText>
    <label>Valor inicial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>