force-app/main/default/objects/Proposta_do_centro__c/fields/Valor_total_do_dinheiro_investido__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_do_dinheiro_investido__c</fullName>
    <description>Valor total do dinheiro investido.</description>
    <inlineHelpText>Valor total do dinheiro investido.</inlineHelpText>
    <label>Valor total do dinheiro investido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>